# vision_b_sub

./: 01_overall_system.md  02_sub_gaze_error_node.md  03_servo_node.md  04_picamera_streaming.md  configure_camera_overlay.sh  fix_imx219_camera.sh  repair_camera_stack.sh
.debs/: binutils-aarch64-linux-gnu_2.38-4ubuntu2.12_arm64.deb  binutils_2.38-4ubuntu2.12_arm64.deb  libasan6_11.4.0-1ubuntu1~22.04.3_arm64.deb  libatomic1_12.3.0-1ubuntu1~22.04.3_arm64.deb  libc6-dev_2.35-0ubuntu3.13_arm64.deb  libcamera-dev_0~git20200629+e7aa92a-9_arm64.deb  libcamera0_0~git20200629+e7aa92a-9_arm64.deb  libcap-dev_1%3a2.44-1ubuntu0.22.04.3_arm64.deb  libcap2_1%3a2.44-1ubuntu0.22.04.3_arm64.deb  libdrm-dev_2.4.113-2~ubuntu0.22.04.1_arm64.deb  libevent-dev_2.1.12-stable-1build3_arm64.deb  libfmt-dev_8.1.1+ds1-2_arm64.deb  libfmt8_8.1.1+ds1-2_arm64.deb  libgcc-11-dev_11.4.0-1ubuntu1~22.04.3_arm64.deb  libgnutls28-dev_3.7.3-4ubuntu1.9_arm64.deb  libgomp1_12.3.0-1ubuntu1~22.04.3_arm64.deb  liblttng-ust-common1_2.13.1-1ubuntu1_arm64.deb  liblttng-ust1_2.13.1-1ubuntu1_arm64.deb  libpython3.10_3.10.12-1~22.04.15_arm64.deb  libstdc++-11-dev_11.4.0-1ubuntu1~22.04.3_arm64.deb  libtsan0_11.4.0-1ubuntu1~22.04.3_arm64.deb  libubsan1_12.3.0-1ubuntu1~22.04.3_arm64.deb  liburcu8_0.13.1-1_arm64.deb  libyaml-dev_0.2.2-1build2_arm64.deb  linux-libc-dev_5.15.0-185.195_arm64.deb  python3.10-dev_3.10.12-1~22.04.15_arm64.deb
.gnu-bin/: aarch64-linux-gnu-gcc  c++
vitamin_d_ws/src/vitamin_d/: package.xml  setup.cfg  setup.py
vitamin_d_ws/src/vitamin_d/vitamin_d/: servo_node.py  sub_gaze_error_node.py
(+891 files in other folders)
